<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home1"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_enquire"
            android:icon="@drawable/ic_enquire"
            android:title="@string/app_name_enquire" />
        <item
            android:id="@+id/nav_Map_Services"
            android:icon="@drawable/mapservices"
            android:title="@string/map_services" />
        <item
            android:id="@+id/nav_Map_Items"
            android:icon="@drawable/ic_items"
            android:title="@string/map_items" />
        <item
            android:id="@+id/nav_Refresh_Map"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh_mapping" />
        <item
            android:id="@+id/nav_claim"
            android:icon="@drawable/ic_claims"
            android:title="@string/app_name_claim" />
        <item
            android:id="@+id/nav_Reports"
            android:icon="@drawable/statistics"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_Sync"
            android:icon="@drawable/ic_synchronize"
            android:title="@string/synchronize" />
        <item
            android:id="@+id/nav_Retrieve"
            android:icon="@drawable/mapservices"
            android:title="@string/retrieve" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about1"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/ic_quit1"
            android:title="@string/quit" />
    </group>

</menu>
