<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/HealthFacility"/>
        <TextView
            android:id="@+id/healthFacilityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/HealthFacility"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/HealthFacilityName"/>
        <TextView
            android:id="@+id/healthFacilityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:background="@drawable/bottom_side_border"
            android:text="@string/HealthFacilityName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/PatientName"/>
        <TextView
            android:id="@+id/PatientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/PatientName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/ClaimCode"/>
        <TextView
            android:id="@+id/ClaimCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/ClaimCode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/MainDg"/>
        <TextView
            android:id="@+id/MainDg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/MainDg"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/SecDg1"/>
        <TextView
            android:id="@+id/SecDg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/SecDg1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/SecDg2"/>
        <TextView
            android:id="@+id/SecDg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/SecDg2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/SecDg3"/>
        <TextView
            android:id="@+id/SecDg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/SecDg3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/SecDg4"/>
        <TextView
            android:id="@+id/SecDg4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:background="@drawable/bottom_side_border"
            android:text="@string/SecDg4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/visit_date_from"/>
        <TextView
            android:id="@+id/visit_date_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/visit_date_from"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/visit_date_to"/>
        <TextView
            android:id="@+id/visit_date_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/visit_date_to"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/date_claimed"/>
        <TextView
            android:id="@+id/dateClaimed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/date_claimed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/date_processed_from"/>
        <TextView
            android:id="@+id/date_processed_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/date_processed_from"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/VisitType"/>
        <TextView
            android:id="@+id/VisitType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:background="@drawable/bottom_side_border"
            android:text="@string/VisitType"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/GuaranteeNo"/>
        <TextView
            android:id="@+id/etGuaranteeNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/GuaranteeNo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/Claimed"/>
        <TextView
            android:id="@+id/Claimed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/Claimed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/Approved"/>
        <TextView
            android:id="@+id/Approved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/Approved"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/Adjusted"/>
        <TextView
            android:id="@+id/Adjusted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/Adjusted"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/ClaimStatus"/>
        <TextView
            android:id="@+id/ClaimStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:background="@drawable/bottom_side_border"
            android:text="@string/ClaimStatus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/Explanation"/>
        <TextView
            android:id="@+id/Explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:background="@drawable/bottom_side_border"
            android:textColor="@color/Orange"
            android:text="@string/Explanation"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:text="@string/Adjustment"/>
        <TextView
            android:id="@+id/Adjustment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="@color/Black"
            android:text="@string/Adjustment"/>
    </LinearLayout>

</LinearLayout>